--- a/index.html
+++ b/index.html
@@ -255,14 +255,14 @@
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#facebook"></use>
+                        <use href=".//img/symbol-defs.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#linkedin"></use>
+                        <use href=".//img/symbol-defs.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -573,7 +573,7 @@
                 class="footer-social__link"
               >
                 <svg width="20" height="20">
-                  <use href="./img/symbol-defs.svg#linkedin"></use>
+                  <use href="/img/symbol-defs.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
