--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
             <li class="team__item">
               <picture>
                 <source
-                  srcset="./img/mobile/dem.jpg 1x, ./img/mobile/dem2x.jpg 2x"
-                  media="(max-width: 767px)"
+                  srcset="./img/mobile/dem.jpg 1x, ./img/mobile/dem_2x.jpg 2x"
+                  media="(max-width:767px)"
                 />
                 <source
-                  srcset="./img/tablet/dem.jpg 1x, ./img/tablet/dem2x.jpg 2x"
+                  srcset="./img/tablet/dem.jpg 1x, ./img/tablet/dem_2x.jpg 2x"
                   media="(max-width: 1199px)"
                 />
                 <source srcset="./img/dem.jpg 1x, ./img/dem2x.jpg 2x" media="(min-width:1200px)" />
@@ -255,14 +255,14 @@
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href=".//img/symbol-defs.svg#facebook"></use>
+                        <use href="./img/symbol-defs.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href=".//img/symbol-defs.svg#linkedin"></use>
+                        <use href="./img/symbol-defs.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -273,11 +273,11 @@
             <li class="team__item">
               <picture>
                 <source
-                  srcset="./img/mobile/repina.jpg 1x, ./img/mobile/repina2x.jpg 2x"
+                  srcset="./img/mobile/repina.jpg 1x, ./img/mobile/repina_2x.jpg 2x"
                   media="(max-width: 767px)"
                 />
                 <source
-                  srcset="./img/tablet/repina2.jpg 1x, ./img/tablet/repina2x.jpg 2x"
+                  srcset="./img/tablet/repina2.jpg 1x, ./img/tablet/repina_2x.jpg 2x"
                   media="(max-width: 1199px)"
                 />
                 <source
@@ -330,11 +330,11 @@
             <li class="team__item">
               <picture>
                 <source
-                  srcset="./img/mobile/tarasov.jpg 1x, ./img/mobile/tarasov2x.jpg 2x"
+                  srcset="./img/mobile/tarasov.jpg 1x, ./img/mobile/tarasov_2x.jpg 2x"
                   media="(max-width: 767px)"
                 />
                 <source
-                  srcset="./img/tablet/tarasov.jpg 1x, ./img/tablet/tarasov2x.jpg 2x"
+                  srcset="./img/tablet/tarasov.jpg 1x, ./img/tablet/tarasov_2x.jpg 2x"
                   media="(max-width: 1199px)"
                 />
                 <source
@@ -387,11 +387,11 @@
             <li class="team__item">
               <picture>
                 <source
-                  srcset="./img/mobile/ermakov.jpg 1x, ./img/mobile/ermakov2x.jpg 2x"
+                  srcset="./img/mobile/ermakov.jpg 1x, ./img/mobile/ermakov_2x.jpg 2x"
                   media="(max-width: 767px)"
                 />
                 <source
-                  srcset="./img/tablet/ermakov.jpg 1x, ./img/tablet/ermakov2x.jpg 2x"
+                  srcset="./img/tablet/ermakov.jpg 1x, ./img/tablet/ermakov_2x.jpg 2x"
                   media="(max-width: 1199px)"
                 />
                 <source
@@ -451,7 +451,7 @@
           <ul class="client__list">
             <li class="client__item">
               <a class="client__link" href="">
-                <svg class="client-icon" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="./img/symbol-defs.svg#client1"></use>
                 </svg>
               </a>
@@ -459,7 +459,7 @@
 
             <li class="client__item">
               <a class="client__link" href="">
-                <svg class="client-icon" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="./img/symbol-defs.svg#client2"></use>
                 </svg>
               </a>
@@ -467,7 +467,7 @@
 
             <li class="client__item">
               <a class="client__link" href="">
-                <svg class="client-icon" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="./img/symbol-defs.svg#client3"></use>
                 </svg>
               </a>
@@ -475,7 +475,7 @@
 
             <li class="client__item">
               <a class="client__link" href="">
-                <svg class="client-icon" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="./img/symbol-defs.svg#client4"></use>
                 </svg>
               </a>
@@ -483,7 +483,7 @@
 
             <li class="client__item">
               <a class="client__link" href="">
-                <svg class="client-icon" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="./img/symbol-defs.svg#client5"></use>
                 </svg>
               </a>
@@ -491,7 +491,7 @@
 
             <li>
               <a class="client__link" href="">
-                <svg class="client-icon" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="./img/symbol-defs.svg#client6"></use>
                 </svg>
               </a>
@@ -573,7 +573,7 @@
                 class="footer-social__link"
               >
                 <svg width="20" height="20">
-                  <use href="/img/symbol-defs.svg#linkedin"></use>
+                  <use href="./img/symbol-defs.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -672,7 +672,7 @@
           <div class="form__box">
             <input class="form__input" name="user-name" type="text" />
             <svg class="form__svg" width="18" height="18">
-              <use href="./img/symbol-defs.svg#person-black"></use>
+              <use href="./img/symbol-defs.svg#person"></use>
             </svg>
           </div>
           <label class="form__label">Телефон</label>
