--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             aria-expanded="false"
           >
             <svg width="40" height="40">
-              <use href="./img/symbol-defs.svg#menu"></use>
+              <use href="./img/symbol-defs.svg#icon-menu"></use>
             </svg>
           </button>
         </nav>
@@ -57,7 +57,7 @@
           <li>
             <a href="mailto:info@devstudio.com" class="address__contact-link">
               <svg class="address__contact-icon" width="16" height="12">
-                <use href="./img/symbol-defs.svg#mail"></use>
+                <use href="./img/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -66,7 +66,7 @@
           <li>
             <a href="tel:+380961111111" class="address__contact-link">
               <svg class="address__contact-icon" width="10" height="16">
-                <use href="./img/symbol-defs.svg#smartphone"></use>
+                <use href="./img/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +380961111111</a
             >
@@ -92,7 +92,7 @@
             <li class="feature__item">
               <div class="feature__icon">
                 <svg width="70" height="70">
-                  <use href="./img/symbol-defs.svg#antenna"></use>
+                  <use href="./img/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="feature__title">Увага до деталей</h3>
@@ -104,7 +104,7 @@
             <li class="feature__item">
               <div class="feature__icon">
                 <svg width="70" height="70">
-                  <use href="./img/symbol-defs.svg#clock"></use>
+                  <use href="./img/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="feature__title">Пунктуальність</h3>
@@ -116,7 +116,7 @@
             <li class="feature__item">
               <div class="feature__icon">
                 <svg width="70" height="70">
-                  <use href="./img/symbol-defs.svg#diagram"></use>
+                  <use href="./img/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="feature__title">Планування</h3>
@@ -128,7 +128,7 @@
             <li class="feature__item">
               <div class="feature__icon">
                 <svg width="70" height="70">
-                  <use href="./img/symbol-defs.svg#astronaut"></use>
+                  <use href="./img/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="feature__title">Сучасні технології</h3>
@@ -241,28 +241,28 @@
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#instagram"></use>
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#twitter"></use>
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#facebook"></use>
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#linkedin"></use>
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -298,28 +298,28 @@
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#instagram"></use>
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#twitter"></use>
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#facebook"></use>
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#linkedin"></use>
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -355,28 +355,28 @@
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#instagram"></use>
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#twitter"></use>
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#facebook"></use>
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#linkedin"></use>
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -412,28 +412,28 @@
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#instagram"></use>
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#twitter"></use>
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#facebook"></use>
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon__link">
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#linkedin"></use>
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -452,7 +452,7 @@
             <li class="client__item">
               <a class="client__link" href="">
                 <svg width="106" height="60">
-                  <use href="./img/symbol-defs.svg#client1"></use>
+                  <use href="./img/symbol-defs.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
@@ -460,7 +460,7 @@
             <li class="client__item">
               <a class="client__link" href="">
                 <svg width="106" height="60">
-                  <use href="./img/symbol-defs.svg#client2"></use>
+                  <use href="./img/symbol-defs.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
@@ -468,7 +468,7 @@
             <li class="client__item">
               <a class="client__link" href="">
                 <svg width="106" height="60">
-                  <use href="./img/symbol-defs.svg#client3"></use>
+                  <use href="./img/symbol-defs.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
@@ -476,7 +476,7 @@
             <li class="client__item">
               <a class="client__link" href="">
                 <svg width="106" height="60">
-                  <use href="./img/symbol-defs.svg#client4"></use>
+                  <use href="./img/symbol-defs.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
@@ -484,7 +484,7 @@
             <li class="client__item">
               <a class="client__link" href="">
                 <svg width="106" height="60">
-                  <use href="./img/symbol-defs.svg#client5"></use>
+                  <use href="./img/symbol-defs.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
@@ -492,7 +492,7 @@
             <li>
               <a class="client__link" href="">
                 <svg width="106" height="60">
-                  <use href="./img/symbol-defs.svg#client6"></use>
+                  <use href="./img/symbol-defs.svg#icon-client6"></use>
                 </svg>
               </a>
             </li>
@@ -537,7 +537,7 @@
                 class="footer-social__link"
               >
                 <svg width="20" height="20">
-                  <use href="./img/symbol-defs.svg#instagram"></use>
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -549,7 +549,7 @@
                 class="footer-social__link"
               >
                 <svg width="20" height="20">
-                  <use href="./img/symbol-defs.svg#twitter"></use>
+                  <use href="./img/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -561,7 +561,7 @@
                 class="footer-social__link"
               >
                 <svg width="20" height="20">
-                  <use href="./img/symbol-defs.svg#facebook"></use>
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -573,7 +573,7 @@
                 class="footer-social__link"
               >
                 <svg width="20" height="20">
-                  <use href="./img/symbol-defs.svg#linkedin"></use>
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -595,7 +595,7 @@
     <div class="mobile-menu js-menu-container" id="mobile-menu">
       <button class="mobile-menu__btn js-close-menu" type="button">
         <svg width="40" height="40">
-          <use href="./img/symbol-defs.svg#close"></use>
+          <use href="./img/symbol-defs.svg#icon-close"></use>
         </svg>
       </button>
       <div class="mobile-menu__content">
@@ -672,21 +672,21 @@
           <div class="form__box">
             <input class="form__input" name="user-name" type="text" />
             <svg class="form__svg" width="18" height="18">
-              <use href="./img/symbol-defs.svg#person"></use>
+              <use href="./img/symbol-defs.svg#icon-person"></use>
             </svg>
           </div>
           <label class="form__label">Телефон</label>
           <div class="form__box">
             <input class="form__input" name="tel" type="tel" />
             <svg class="form__svg" width="18" height="18">
-              <use href="./img/symbol-defs.svg#phone-black"></use>
+              <use href="./img/symbol-defs.svg#icon-phone-black"></use>
             </svg>
           </div>
           <label class="form__label">Пошта</label>
           <div class="form__box">
             <input class="form__input" name="mail" type="email" />
             <svg class="form__svg" width="18" height="18">
-              <use href="./img/symbol-defs.svg#email-black"></use>
+              <use href="./img/symbol-defs.svg#icon-email-black"></use>
             </svg>
           </div>
           <div class="form-textarea__box">
@@ -708,7 +708,7 @@
         </form>
         <button class="modal__button" data-modal-close>
           <svg class="modal__svg" width="18" height="18">
-            <use href="./img/symbol-defs.svg#close"></use>
+            <use href="./img/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
       </div>
