--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
             aria-expanded="false"
           >
             <svg width="40" height="40">
-              <use href="./img/symbol-defs.svg#menu"></use>
+              <use href="./img/symbol-defs.svg#icon-menu"></use>
             </svg>
           </button>
         </nav>
@@ -57,7 +57,7 @@
           <li>
             <a href="mailto:info@devstudio.com" class="address__contact-link">
               <svg width="16" height="12">
-                <use href="./img/symbol-defs.svg#mail"></use>
+                <use href="./img/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -66,7 +66,7 @@
           <li>
             <a href="tel:+380961111111" class="address__contact-link">
               <svg width="10" height="16">
-                <use href="./img/symbol-defs.svg#smartphone"></use>
+                <use href="./img/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +380961111111</a
             >
@@ -506,7 +506,7 @@
                 class="footer-social__link"
               >
                 <svg width="20" height="20">
-                  <use href="./img/symbol-defs.svg#instagram"></use>
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -530,7 +530,7 @@
                 class="footer-social__link"
               >
                 <svg width="20" height="20">
-                  <use href="./img/symbol-defs.svg#facebook"></use>
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -542,7 +542,7 @@
                 class="footer-social__link"
               >
                 <svg width="20" height="20">
-                  <use href="./img/symbol-defs.svg#linkedin"></use>
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -563,7 +563,7 @@
     <div class="mobile-menu js-menu-container" id="mobile-menu">
       <button class="mobile-menu__btn js-close-menu" type="button">
         <svg width="40" height="40">
-          <use href="./img/symbol-defs.svg#close"></use>
+          <use href="./img/symbol-defs.svg#icon-close"></use>
         </svg>
       </button>
       <div class="mobile-menu__content">
