--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
         </nav>
 
         <!-- Контакти -->
-        <ul class="address">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address__contact-link">
-              <svg class="address__contact-icon" width="16" height="12">
-                <use href="./img/symbol-defs.svg#icon-envelope"></use>
+        <ul class="header__contact">
+          <li class="header__contact-item">
+            <a href="mailto:info@devstudio.com" class="header__contact-link">
+              <svg width="16" height="12">
+                <use href="./img/symbol-defs.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
 
-          <li>
-            <a href="tel:+380961111111" class="address__contact-link">
-              <svg class="address__contact-icon" width="10" height="16">
+          <li class="header__contact-item">
+            <a href="tel:+380961111111" class="header__contact-link">
+              <svg width="10" height="16">
                 <use href="./img/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +380961111111</a
@@ -672,7 +672,7 @@
           <div class="form__box">
             <input class="form__input" name="user-name" type="text" />
             <svg class="form__svg" width="18" height="18">
-              <use href="./img/symbol-defs.svg#icon-person"></use>
+              <use href="./img/symbol-defs.svg#icon-person-black"></use>
             </svg>
           </div>
           <label class="form__label">Телефон</label>
