--- a/portfolio.html
+++ b/portfolio.html
@@ -53,18 +53,18 @@
         </nav>
 
         <!-- Контакти -->
-        <ul class="address">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address__contact-link">
+        <ul class="header__contact">
+          <li class="header__contact-item">
+            <a href="mailto:info@devstudio.com" class="header__contact-link">
               <svg width="16" height="12">
-                <use href="./img/symbol-defs.svg#icon-envelope"></use>
+                <use href="./img/symbol-defs.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
 
-          <li>
-            <a href="tel:+380961111111" class="address__contact-link">
+          <li class="header__contact-item">
+            <a href="tel:+380961111111" class="header__contact-link">
               <svg width="10" height="16">
                 <use href="./img/symbol-defs.svg#icon-smartphone"></use>
               </svg>
