--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
         <nav class="mobile-menu__nav">
           <ul class="mobile-menu__list">
             <li class="mobile-menu__item">
-              <a class="mobile-menu__link" href="./index.html">Студія</a>
+              <a class="mobile-menu__link mobile-menu__link--current" href="./index.html">Студія</a>
             </li>
             <li class="mobile-menu__item">
               <a class="mobile-menu__link" href="./portfolio.html">Портфоліо</a>
